Wed Mar  6 21:00:23 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (USE_SLEEPY_TIMER_THREAD): use more accurate
	  ifdef condtions.

Sun Mar  3 02:30:36 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (set_nonblock): new helper function for set
	  O_NONBLOCK.
	* thread_pthread.c (rb_thread_create_timer_thread): set O_NONBLOCK
	  to timer_thread_pipe[0] too.

Sun Mar 10 09:12:51 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: described syntax of string form.
	* rational.c: ditto.

Sat Mar  9 11:58:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_extended): check for prepended object.
	  [ruby-core:53206] [Bug #8043]

Sat Mar  9 08:36:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (features_index_add_single, rb_feature_p): store single index
	  as Fixnum to reduce the number of arrays for the indexes.  based on
	  the patch by tmm1 (Aman Gupta) in [ruby-core:53216] [Bug #8048].

Sat Mar  9 00:25:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_object0): load prepended objects.  treat the class of
	  extended object in the included modules as prepended singleton
	  class. [ruby-core:53202] [Bug #8041]

Fri Mar  8 19:44:00 2013  Akinori MUSHA  <knu@iDaemons.org>

	* man/rake.1, man/ruby.1: Use the Pa macro to make URLs stand out.

Fri Mar  8 13:20:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/pathname/pathname.c (path_f_pathname): rdoc for Pathname()

Fri Mar  8 12:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* man/rake.1: Document ENVIRONMENT variables on RAKE(1) manpage

Fri Mar  8 10:44:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/webrick/httpproxy.rb: Fix typos in HTTPProxyServer [Bug #8013]
	  Patch by Nobuhiro IMAI [ruby-core:53127]

Fri Mar  8 03:16:15 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* class.c (rb_mod_ancestors): Include singleton_class in ancestors
	  list [Feature #8035]
